@@ -39,6 +39,7 @@ Index of used prefices
 4 trm - Terminal escape sequences outputter
 3 md5 - MD5 module
 4 rng - Pseudo Random module
+4 sh1 - SHA1 module
 ----- - ------------------------------------------------
       - Compound
 ----- - ------------------------------------------------
@@ -87,7 +88,7 @@ Index of used prefices
 7 gzp - GZip module
 5 htm - HTML module
 5 rgx - Regex module
-4 sha - SHA1/2 module
+5 sh2 - SHA2 module
 4 tmr - Timer module
 5 xml - XML module
       - css module
